# SFML_DGM-lib

./: CMakeLists.txt  changelog.txt
examples/example-04-particle-effects/: Main.cpp
examples/example-07-texture-atlas/: Main.cpp
lib/: CMakeLists.txt
lib/include/DGM/classes/: Animation.hpp
lib/src/: Animation.cpp
